fixed text alignment

--- a/sites/all/themes/thinkcollege_boot/css/tc-style.css
+++ b/sites/all/themes/thinkcollege_boot/css/tc-style.css
@@ -398,7 +398,6 @@ article.node-resource .field-label {
     position: relative;
     font-size: 18px;
     color: #fff;
-    text-align: center;
     line-height: 34px;
 }
 
